vaultwarden/deploy.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: vaultwarden
  namespace: vaultwarden
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/match-tag: "true"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vaultwarden
  template:
    metadata:
      labels:
        app: vaultwarden
        name: vaultwarden
    spec:
      restartPolicy: Always
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
      containers:
      - name: vaultwarden
        image: vaultwarden/server:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 50m
            memory: 300Mi
          limits:
            cpu: 200m
            memory: 300Mi
        livenessProbe:
          httpGet:
            path: /
            port: 8087
          initialDelaySeconds: 15
          periodSeconds: 60
        volumeMounts:
        - name: vaultwarden-data
          mountPath: /data
      volumes:
        - name: vaultwarden-data
          persistentVolumeClaim:
            claimName: vaultwarden-pvc
      automountServiceAccountToken: false
