vaultwarden/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  parentRefs:
  - name: tls
    namespace: cilium
    sectionName: https
  hostnames:
  - "cloud-vaultwarden.ucdialplans.com"
  rules:
  - backendRefs:
    - name: vaultwarden-ui
      namespace: vaultwarden
      kind: Service
      port: 8087
